--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <html>
      <head>
      <title>Bloc Jams</title>
-         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
         <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <link rel="stylesheet" type="text/css" href="styles/normalize.css">
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="styles/landing.css">
      </head>
      <body class="landing">
-        <nav class="navbar"> <!-- navigation bar -->
+        <nav class="navbar"> 
                   <a href="index.html" class="logo">
              <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
          </a>
@@ -19,7 +19,7 @@
          </div>
         
          </nav>
-         <section class="hero-content"> <!-- hero content -->
+         <section class="hero-content">
           <h1 class="hero-title">Turn the music up!</h1>
          </section> 
                   <section class="selling-points container clearfix"> <!-- selling points -->
